fixed problems in the ssa algorithm and lost copy problem